force-app/main/default/objects/Sent_Email__c/Sent_Email__c.object-meta.xml
<CustomObject>
    <label>Sent Email</label>
    <nameField>
        <displayFormat>Email-{0000}</displayFormat>
        <label>Sent Email Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sent Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>