force-app/main/default/objects/Sent_Email__c/fields/Copied_to__c.field-meta.xml
<CustomField>
    <fullName>Copied_to__c</fullName>
    <label>Copied to</label>
    <type>TextArea</type>
</CustomField>