force-app/main/default/objects/Sent_Email__c/fields/Email_Message__c.field-meta.xml
<CustomField>
    <fullName>Email_Message__c</fullName>
    <label>Email Message</label>
    <type>TextArea</type>
</CustomField>