force-app/main/default/objects/Sent_Email__c/fields/Email_Recipients__c.field-meta.xml
<CustomField>
    <fullName>Email_Recipients__c</fullName>
    <label>Email Recipients</label>
    <type>TextArea</type>
</CustomField>