force-app/main/default/objects/Sent_Email__c/fields/Sent_on__c.field-meta.xml
<CustomField>
    <fullName>Sent_on__c</fullName>
    <label>Sent on</label>
    <type>DateTime</type>
</CustomField>