force-app/main/default/objects/Sent_Email__c/fields/Sent_to__c.field-meta.xml
<CustomField>
    <fullName>Sent_to__c</fullName>
    <label>Sent to</label>
    <type>TextArea</type>
</CustomField>