force-app/main/default/objects/Sent_Email__c/fields/Sent_using__c.field-meta.xml
<CustomField>
    <fullName>Sent_using__c</fullName>
    <label>Sent via</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Schedule Jobs</fullName>
            </value>
            <value>
                <fullName>Manually triggered from code</fullName>
            </value>
            <value>
                <fullName>Lightning Component</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>